# rc-car

./: .gitignore  .gitmodules  a.out  test.cpp
src/ackermann_vehicle_description/launch/: ackermann_vehicle.launch  rviz.launch
src/ackermann_vehicle_description/urdf/: camera.xacro  imu.xacro  ir.xacro  lidar.xacro  lidar_3d.xacro  rc_car.xacro
src/ackermann_vehicle_gazebo/: CMakeLists.txt  package.xml
src/ackermann_vehicle_gazebo/config/: config.rviz  key_binding.yaml
src/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  manual_drive.launch  obstacle_avoidance.launch
src/ackermann_vehicle_gazebo/scripts/: cmd_vel_to_ackermann_drive.py  keyboard_driver_node.py
src/ackermann_vehicle_gazebo/src/: l2p.cpp
src/ackermann_vehicle_gazebo/worlds/: cube.world  testroom.world
src/arduino/: obstacle_avoidance.cpp  obstacle_avoidance.h  rc_car.ino
src/arduino/rc_car/: ObstacleAvoidance.cpp  ObstacleAvoidance.h  Point.h  SplitAndMerge.cpp  SplitAndMerge.h  rc_car.ino
src/obstacle_avoidance/: CMakeLists.txt  package.xml
src/obstacle_avoidance/include/obstacle_avoidance/: ObstacleAvoidance.h  Point.h  SplitAndMerge.h  Visualization.h
src/obstacle_avoidance/src/: ObstacleAvoidance.cpp  SplitAndMerge.cpp  Visualization.cpp  obstacle_avoidance_node.cpp
